# NazbyProblem

./: CMakeLists.txt  Makefile  README.md  cInsertion.c  cMulti.c  cMulti.cpp  cSeq.c  cSeq.cpp  coordReader.c  coordReader.h  fInsertion.c  fmainSeq.cpp  fmainSeq2.cpp  lSeq.cpp  main.cpp  ompcInsertion.c  ompfInsertion.c
